--- a/styles/style.css
+++ b/styles/style.css
@@ -203,7 +203,6 @@
 
   .header__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    margin-left: -20px;
   }
 
   .header__description {
@@ -242,17 +241,17 @@
   }
   
   .section--advice .section__title {
-    grid-column: 1 / 3;
+    grid-column: 1 / 2;
     margin-bottom: 0;
   }
   
   .section--advice .advice-subtitle {
-    grid-column: 1 / 3;
+    grid-column: 2 / 3;
     margin-top: 0;
   }
   
   .section--advice .advice-grid {
-    grid-column: 1 / 3;
+    grid-column: 2 / 3;
     display: flex;
     flex-direction: column;
     gap: 20px;
