--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,5 +1,24 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
-.page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+/* styles/variables.css */
+:root {
+  /* Цвета */
+  --bg-color: #000028;
+  --bg-image: url(../images/cover-image-dark.png);
+  --text-color: #f1b2ce;
+  --title-color: #db00ff;
+  --accent-color: #ff0070;
+  --accent-transparent: rgba(255, 0, 112, 0.4);
+  --subtitle-color: #000028;
+  
+  /* Шрифты */
+  --font-family: 'IBM Plex mono', 'Courier New', Courier, monospace;
+  --main-font-size: 18px;
+  --main-line-height: 1.3;
+  
+  /* Отступы */
+  --padding-mobile: 10px;
+  --padding-tablet: 20px;
+  --padding-desktop: 20px;
+  
+  /* Тени */
+  --title-shadow: 4px 4px 0 var(--accent-color);
 }
